# shellfish

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
examples/: rssh-client.rs  rssh-proxy.rs  rssh-server.rs  shellfish-proxy.rs  shellfish-server.rs
resources/: ed25519-ca  ed25519-ca.pub  ed25519-host  ed25519-host-cert.pub  ed25519-host-cert.pub.raw  ed25519-host.pub  ed25519-user  ed25519-user-cert.pub  ed25519-user-cert.pub.raw  ed25519-user.pub  ed25519-user.pub.raw  keys.sh
src/: agent.rs  algorithm.rs  algorithms.rs  auth.rs  buffer.rs  client.rs  codec.rs  codec_ssh.rs  connection.rs  core.rs  exchange.rs  host.rs  host_key_verification.rs  identity.rs  keys.rs  known_hosts.rs  language.rs  lib.rs  message.rs  parser.rs  parser_ext.rs  pipe.rs  requestable.rs  role.rs  server.rs  service.rs  socket.rs  transport.rs  user_auth.rs  util.rs
src/agent/: codec.rs  error.rs  frame.rs  internal.rs  local.rs  msg_failure.rs  msg_identities_answer.rs  msg_identities_request.rs  msg_sign_request.rs  msg_sign_response.rs  msg_success.rs  transmitter.rs
src/agent/local/: error.rs  frame.rs  msg_failure.rs  msg_identities_answer.rs  msg_identities_request.rs  msg_sign_response.rs  msg_success.rs  transmitter.rs
src/algorithm/: auth.rs  authentication.rs  compression.rs  encryption.rs  host_key.rs  kex.rs  mac.rs
src/algorithm/auth/: certificate.rs  identity.rs  public_key.rs  signature.rs  ssh_ed25519.rs  ssh_ed25519_cert.rs  ssh_rsa.rs
src/algorithm/authentication/: ssh_ed25519.rs  ssh_ed25519_cert.rs  ssh_rsa.rs  unknown.rs
src/algorithm/host_key/: ed25519.rs  ssh_ed25519.rs  ssh_rsa.rs
src/algorithms/: encryption.rs  mac.rs
src/auth/: agent.rs  cert.rs  error.rs  identity.rs  msg_sign_response.rs  public_key.rs  signature.rs  ssh_ed25519.rs  ssh_ed25519_cert.rs  ssh_rsa.rs  user_auth.rs
src/auth/agent/: local.rs
src/auth/user_auth/: method.rs  msg_failure.rs  msg_success.rs  msg_userauth_request.rs  signature.rs
src/client/: config.rs  error.rs
src/codec/: decoder.rs  encoder.rs
src/connection/: channel.rs  config.rs  error.rs  future.rs  global.rs  handler.rs  msg.rs  request.rs  state.rs
src/connection/channel/: direct_tcpip.rs  handle.rs  handle_inner.rs  interconnect.rs  list.rs  open_failure.rs  open_future.rs  open_request.rs  request_failure.rs  (+4 more)
src/core/: role.rs
src/host/: files.rs  known_hosts.rs  name.rs  verification.rs
src/identity/: cert.rs  identity.rs  signature.rs  ssh_ed25519.rs  ssh_ed25519_cert.rs  ssh_rsa.rs
src/keys/: curve25519.rs  ed25519.rs  rsa.rs  unknown.rs
src/known_hosts/: files.rs  known_hosts.txt
src/pipe/: ring_buffer.rs
src/server/: config.rs  error.rs
src/service/: connection.rs  user_auth.rs
src/transport/: buffer.rs  buffered.rs  buffered_receiver.rs  buffered_sender.rs  cipher.rs  config.rs  cookie.rs  crypto.rs  debug.rs  default.rs  disconnect.rs  ecdh.rs  ecdh_algorithm.rs  ecdh_hash.rs  encryption.rs  error.rs  for_each.rs  host_key_verification.rs  id.rs  ident.rs  identification.rs  ignore.rs  kex.rs  key_streams.rs  keys.rs  message.rs  msg.rs  msg_debug.rs  msg_disconnect.rs  msg_ecdh_init.rs  msg_ecdh_reply.rs  msg_ignore.rs  msg_kex_init.rs  msg_new_keys.rs  msg_service_accept.rs  msg_service_request.rs  msg_unimplemented.rs  packet.rs  packet_layout.rs  secret.rs  (+12 more)
src/user_auth/: error.rs  method.rs  msg.rs  server.rs  session.rs  signature.rs
src/util/: buffer.rs  cidr.rs  codec.rs  glob.rs  manyshot.rs  oneshot.rs  process.rs  pty.rs  runtime.rs  secret.rs  socket.rs  socks5.rs  tcp.rs
tests/: agent.rs  connections.rs  direct_tcpip.rs  host.rs  socket.rs  transport.rs
(+197 files in other folders)
