cargo-features = ["strip"]

[package]
name = "shellfish"
version = "0.1.0"
authors = ["Lars Petersen <info@lars-petersen.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/lpeterse/shellfish/"
keywords = ["ssh", "network", "async", "crypto"]
description = ""

[features]
default = ["rt-tokio"]
rt-async = ["async-std"]
rt-tokio = ["tokio"]

[dependencies]
base64 = "^0.13"
chacha20 = { version = "^0.6", features = ["legacy"] }
ed25519-dalek = { version = "^1.0", default-features = false, features = [] }
futures-timer = "^3.0"
futures-util = { version = "^0.3", default-features = false, features = [ "io" ] }
generic-array = "^0.14"
hmac = "^0.10"
libc = "^0.2"
log = "^0.4"
poly1305 = "^0.6"
rand = "^0.7"
sha-1 = "^0.9"
sha2 = "^0.9"
x25519-dalek = "^1.1"
zeroize = "^1.2"
async-std = { version = "^1.9", optional = true }
tokio = { version = "^1.0", optional = true, features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
    "io-util"
] }

[dev-dependencies]
clap = { version = "^2.33", default-features = false }
env_logger = { version = "*", default-features = false }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1
opt-level = "z"
strip = "symbols"

[[example]]
name = "shellfish-proxy"
