#cargo-features = ["strip"]

[package]
name = "shellfish"
version = "0.1.0"
authors = ["Lars Petersen <info@lars-petersen.net>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/lpeterse/shellfish/"
keywords = ["ssh", "network", "async", "crypto", "tokio"]
description = "A pure Rust SSH implementation"

[dependencies]
base64 = "^0.13"
chacha20 = { version = "^0.7", features = ["legacy"] }
ed25519-dalek = { version = "^1.0", default-features = false }
generic-array = "^0.14"
hmac = "^0.11"
libc = "^0.2"
log = "^0.4"
poly1305 = "^0.7"
rand_core = { version = "^0.5", features = ["getrandom"] }
sha-1 = "^0.9"
sha2 = "^0.9"
x25519-dalek = "^1.1"
zeroize = "^1.2"
tokio = { version = "^1.0", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
    "io-util",
    "sync",
    "macros"
] }

[dev-dependencies]
clap = { version = "^2.33", default-features = false }
env_logger = { version = "*", default-features = true }

[profile.release]
lto = true
panic = "abort"
#strip = "symbols"
opt-level = "z"
codegen-units = 1

[[example]]
name = "shellfish-proxy"
