[package]
name = "shellfish"
version = "0.1.0"
authors = ["Lars Petersen <info@lars-petersen.net>"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lpeterse/shellfish/"
keywords = ["ssh", "network", "async", "crypto", "tokio"]
description = "A pure Rust SSH implementation"

[dependencies]
base64 = "^0.13"
chacha20 = { version = "^0.9" }
ed25519-dalek = { version = "^1.0" }
generic-array = "^0.14"
hmac = "^0.12"
log = "^0.4"
poly1305 = "^0.8"
rand_core = { version = "^0.5", features = ["getrandom"] }
sha-1 = "^0.10"
sha2 = "^0.10"
x25519-dalek = "^1.2"
zeroize = "^1.2"
tokio = { version = "1.21.1", features = [
    "fs",
    "net",
    "rt",
    "rt-multi-thread",
    "time",
    "io-util",
    "sync",
    "macros"
] }

[dev-dependencies]
clap = { version = "^3.2", default-features = false, features = ["std", "env"] }
env_logger = { version = "*", default-features = true }

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
opt-level = "z"
codegen-units = 1

[[example]]
name = "shellfish-proxy"
